final text and data touches, scrollbar visibility fix

--- a/game-source/public/game/components/interface/ml/dataset-view/dataset-view.scss
+++ b/game-source/public/game/components/interface/ml/dataset-view/dataset-view.scss
@@ -74,8 +74,10 @@
   }
   
   // TODO how about other browsers?
-  &::-webkit-scrollbar { 
-    width: 0 !important 
+  @include mq($from: mobile-landscape) {
+    &::-webkit-scrollbar { 
+      width: 0 !important 
+    }
   }
   
   &-title {
